2008-02-20  Michael Knaup  <michael.knaup@mac.com>

        Reviewed by Darin.

        - test for Bug 16753: date set methods with no args should result in NaN (Acid3 bug)

        * fast/js/date-set-to-nan-expected.txt: Added.
        * fast/js/date-set-to-nan.html: Added.
        * fast/js/resources/date-set-to-nan.js: Added.

2008-02-20  Oliver Hunt  <oliver@apple.com>

        Reviewed by Hyatt.

        Test to ensure we do not crash on a zero sized canvas.

        * fast/canvas/access-zero-sized-canvas-expected.txt: Added.
        * fast/canvas/access-zero-sized-canvas.html: Added.

2008-02-20  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin.

        http://bugs.webkit.org/show_bug.cgi?id=17106
        <rdar://problem/5750722> Debug build ASSERTs on page load

        * fast/encoding/GBK/close-gbk-converter-expected.txt: Added.
        * fast/encoding/GBK/close-gbk-converter.html: Added.

2008-02-19  Beth Dakin  <bdakin@apple.com>

        Reviewed by Sam.

        Test for <rdar://problem/5729674> Seed: Crash in 
        RenderButton::setStyle at http://www.dinorpg.com

        * fast/forms/input-first-letter.html: Added.
        * platform/mac/fast/forms/input-first-letter-expected.checksum: Added.
        * platform/mac/fast/forms/input-first-letter-expected.png: Added.
        * platform/mac/fast/forms/input-first-letter-expected.txt: Added.

2008-02-19  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        - test for <rdar://problem/5637569> CrashTracer: [REGRESSION] 620 crashes in Safari at com.apple.WebCore: WebCore::RenderBox::setStaticY + 15

        * fast/text/wbr-styled.html: Added.
        * platform/mac-leopard/fast/text/wbr-styled-expected.checksum: Added.
        * platform/mac-leopard/fast/text/wbr-styled-expected.png: Added.
        * platform/mac/fast/css-generated-content/wbr-with-before-content-expected.txt:
        * platform/mac/fast/text/wbr-pre-expected.txt: