@@ -1,0 +1,8 @@
+<p>
+    Test for <i><a href="http://bugs.webkit.org/show_bug.cgi?id=17464">http://bugs.webkit.org/show_bug.cgi?id=17464</a>
+    REGRESSION: Crash in RenderBlock::findNextLineBreak reading r30444 commit email in GMail</i>.
+</p>
+<p>
+    No crash means success.
+</p>
+<div style="width: 100px; white-space: pre-wrap;">Lorem ipsum<wbr>dolor sit amet</div>
