@@ -1,0 +1,27 @@
+layer at (0,0) size 800x600
+  RenderView at (0,0) size 800x600
+layer at (0,0) size 800x600
+  RenderBlock {HTML} at (0,0) size 800x600
+    RenderBody {BODY} at (8,8) size 784x584
+      RenderBlock {P} at (0,0) size 784x36
+        RenderText {#text} at (0,0) size 53x18
+          text run at (0,0) width 53: "Test for "
+        RenderInline {I} at (0,0) size 733x36
+          RenderInline {A} at (0,0) size 301x18 [color=#0000EE]
+            RenderText {#text} at (53,0) size 301x18
+              text run at (53,0) width 301: "http://bugs.webkit.org/show_bug.cgi?id=17464"
+          RenderText {#text} at (354,0) size 733x36
+            text run at (354,0) width 4: " "
+            text run at (358,0) width 375: "REGRESSION: Crash in RenderBlock::findNextLineBreak"
+            text run at (0,18) width 250: "reading r30444 commit email in GMail"
+        RenderText {#text} at (250,18) size 4x18
+          text run at (250,18) width 4: "."
+      RenderBlock {P} at (0,52) size 784x18
+        RenderText {#text} at (0,0) size 156x18
+          text run at (0,0) width 156: "No crash means success."
+      RenderBlock {DIV} at (0,86) size 100x36
+        RenderText {#text} at (0,0) size 84x18
+          text run at (0,0) width 84: "Lorem ipsum"
+        RenderWordBreak {WBR} at (0,0) size 0x0
+        RenderText {#text} at (0,18) size 85x18
+          text run at (0,18) width 85: "dolor sit amet"
