@@ -1,3 +1,15 @@
+2008-02-20  Dan Bernstein  <mitz@apple.com>
+
+        Reviewed by Dave Hyatt.
+
+        - test for http://bugs.webkit.org/show_bug.cgi?id=17464
+          REGRESSION: Crash in RenderBlock::findNextLineBreak reading r30444 commit email in GMail
+
+        * fast/text/wbr-in-pre-crash.html: Added.
+        * platform/mac-leopard/fast/text/wbr-in-pre-crash-expected.checksum: Added.
+        * platform/mac-leopard/fast/text/wbr-in-pre-crash-expected.png: Added.
+        * platform/mac/fast/text/wbr-in-pre-crash-expected.txt: Added.
+
 2008-02-20  Michael Knaup  <michael.knaup@mac.com>
 
         Reviewed by Darin.
